Static implementation in progress